--- a/login/templates/login/base_site.html
+++ b/login/templates/login/base_site.html
@@ -1,18 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MyBooks</title>
-    {% load bootstrap3 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
+    <title>polls</title>
+    
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
   </head>
-  <body>
-   <div class="container">
-    {% block content %}
-    {% endblock %}
-   </div>
-  </body>
+  {% block content %}
+ 
+  {% endblock %}
 </html>
+ 
