--- a/polls/templates/polls/base_site.html
+++ b/polls/templates/polls/base_site.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MyBooks</title>
+    <title>polls</title>
     
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
   </head>
   {% block content %}
  
   {% endblock %}
+
+
 </html>
+ 
  
